WIP fdo#72804 Allow use of firebird.msg

I'm not yet sure whether:

* We want to store firebird.msg in instdir/program
* Whether this works with the packaging process
* Whether this works on windows.

(Currently investigating all of the above, comments welcome.)

Change-Id: I86664db1f1446128bb73e6749f8c00f8313dd414