connectivity/source/drivers/firebird/Driver.cxx
@@ -28,6 +28,7 @@
 #include <comphelper/processfactory.hxx>
 #include <cppuhelper/supportsservice.hxx>
 #include <osl/process.h>
+#include <rtl/bootstrap.hxx>
 #include <svtools/miscopt.hxx>
 
 using namespace com::sun::star;
@@ -57,6 +58,7 @@ namespace connectivity
 // Static const member variables
 const OUString FirebirdDriver::our_sFirebirdTmpVar("FIREBIRD_TMP");
 const OUString FirebirdDriver::our_sFirebirdLockVar("FIREBIRD_LOCK");
+const OUString FirebirdDriver::our_sFirebirdMsgVar("FIREBIRD_MSG");
 
 FirebirdDriver::FirebirdDriver(const ::com::sun::star::uno::Reference< ::com::sun::star::uno::XComponentContext >& _rxContext)
     : ODriver_BASE(m_aMutex)
@@ -76,6 +78,19 @@ FirebirdDriver::FirebirdDriver(const ::com::sun::star::uno::Reference< ::com::su
 
     // Overrides firebird's default of /tmp/firebird or c:\temp\firebird
     osl_setEnvironment(our_sFirebirdLockVar.pData, m_firebirdLockDirectory.GetFileName().pData);
+
+#ifndef SYSTEM_FIREBIRD
+    // Overrides firebird's default of ...:
+    // Apparently /usr/local/firebird on *nix
+    // Unsure what of what it ends up doing on Windows, but users are getting
+    // a C:\Program Files\LibreOfficeDev 4\firebird.msg not found.
+    OUString sMsgPath;
+    if(::rtl::Bootstrap::get("ORIGIN", sMsgPath))
+    {
+        sMsgPath = sMsgPath.copy(OUString("file://").getLength());
+        osl_setEnvironment(our_sFirebirdMsgVar.pData, sMsgPath.pData);
+    }
+#endif
 }
 
 void FirebirdDriver::disposing()
@@ -92,6 +107,10 @@ void FirebirdDriver::disposing()
 
     osl_clearEnvironment(our_sFirebirdTmpVar.pData);
     osl_clearEnvironment(our_sFirebirdLockVar.pData);
+
+#ifndef SYSTEM_FIREBIRD
+    osl_clearEnvironment(our_sFirebirdMsgVar.pData);
+#endif
 
     ODriver_BASE::disposing();
 }
